2006-09-12  Andrew Haley  <aph@redhat.com>

	* java/lang/Thread.java (alive_flag): Make it a byte.
	(THREAD_DEAD, THREAD_ALIVE, THREAD_SIGNALED): new constants.
	(parkPermit): New variable.
	(data): Now package private.
	(Thread): Set alive_flag to THREAD_DEAD, not false.
	(isAlive): Test against THREAD_DEAD.
	* java/lang/natThread.cc (initialize_native): Initialize
	park_mutex and park_cond.
	(finish_): Set parkPermit THREAD_PARK_DEAD.
	(interrupt): Rewrite.  Use an atomic update rather than a mutex to
	access alive_flag.
	If the thread is parked, unpark it.
	(start): Set alive_flag to THREAD_ALIVE, not true.
	(finalize_native): Destroy park_mutex and park_cond.
	* sun/misc/natUnsafe.cc (unpark): New method.
	(park): New method.
	* include/jvm.h (struct natThread): Moved here.

2006-06-07  Andrew Haley  <aph@redhat.com>
 
	* include/jvm.h (_Jv_Linker::maybe_adjust_signature): New.
	(_Jv_Linker::uaddr): New.
	* link.cc (resolve_pool_entry): Call search_method_in_superclasses
	instead of an open-coded loop around search_method_in_class.
	(search_method_in_class): Add a new arg, check_perms.
	(search_method_in_superclasses): New.
	(link_symbol_table): Call maybe_adjust_signature() to extract the
	least significnt bit of the signature pointer.	Do this three
	times, for instace method calls, static methods, and interfaces.
	Call search_method_in_superclasses() instead of
	_Jv_LookupDeclaredMethod.
	(typedef uaddr): Delete.
 
2006-09-11  Andrew Haley  <aph@redhat.com>

	* gij.cc (main): Remove bogus code that sets LTDL_SHLIBPATH_VAR
	and forks.

2006-06-16  Andrew Haley  <aph@redhat.com>

	* java/lang/natClassLoader.cc (_Jv_NewClassFromInitializer): Don't
	copy the whole Class instance from the initializer: instead, copy
	everything but the first word (the vtable pointer).
	Change prototype to (const char* class_initializer).
	(_Jv_RegisterNewClasses): Change prototype to (const char**).
	* java/lang/Class.h (_Jv_RegisterNewClasses): Change prototype to
	(const char**).