@@ -177,13 +177,11 @@ public abstract class AtomicReferenceFieldUpdater<T, V>  {
 	    int modifiers = 0;
             try {
                 field = tclass.getDeclaredField(fieldName);
-		// FIXME: gcj doesn't have sun.reflect.*
-
-// 		caller = sun.reflect.Reflection.getCallerClass(3);
+		caller = sun.reflect.Reflection.getCallerClass(3);
 		modifiers = field.getModifiers();
-//                 sun.reflect.misc.ReflectUtil.ensureMemberAccess(
-//                     caller, tclass, null, modifiers); 
-// 		sun.reflect.misc.ReflectUtil.checkPackageAccess(tclass);
+                sun.reflect.misc.ReflectUtil.ensureMemberAccess(
+                    caller, tclass, null, modifiers); 
+		sun.reflect.misc.ReflectUtil.checkPackageAccess(tclass);
                 fieldClass = field.getType();
             } catch (Exception ex) {
                 throw new RuntimeException(ex);
